--- a/public/css/style-responsive.css
+++ b/public/css/style-responsive.css
@@ -1,341 +1,173 @@
-/* Thomsoon.com - OnePage CSS Responsive
--- version 1.0
--- Copyright (c) 2014 Thomsoon.com
--- licensed under the MIT
---
--- http://www.thomsoon.com/
---
-*/
-
-
-/* iPad (portrait) */
 @media (min-width: 320px) and (max-width: 579px) {
+    body {
+        margin: 0 auto;
+    }
+    #sticky-wrapper {
+        display: none;
+    }
+    .menu {
+        display: none;
+    }
+    .menu-media {
+        display: block;
+    }
 
-.menu{
-  display:none;
+    .start-page .content {
+        width: 300px;
+        height: 100%;
+    }
+    .start-page, .start-page .opacity {
+        height: 100%;
+    }
+    .start-page .content .text {
+        width: 300px;
+        margin: 150px auto;
+    }
+    h1 {
+        font-size: 36px;
+    }
+    .about-me {
+        padding: 50px 0;
+    }
+    .about-me h1 {
+        margin-top: 0;
+        font-size: 26px;
+        letter-spacing: 3px;
+    }
+    .about-me p .title {
+        margin: 20px auto;
+    }
+    .about-me .content {
+        width: 300px;
+    }
+    .about-me hr, .portfolio .portfolio-margin hr, .contact hr {
+        width: 350px;
+    }
+    .portfolio .portfolio-margin {
+        width: 375px;
+        padding: 0;
+    }
+    .portfolio .grid .text {
+        width: 325px;
+    }
+    .portfolio .grid .grid-box {
+        width: 375px;
+        height: 100%;
+    }
+    .grid p {
+        margin: 15px 0 10px;
+        font-size: 2em;
+    }
+    .grid img {
+        width: 100%;
+    }
+    .contact .content .contact-text {
+        padding-left: 0px;
+        width: 281px;
+        text-align: center;
+        margin: 60px auto 0;
+    }
+    .contact .content {
+        width: 300px;
+        margin: 30px auto 120px;
+    }
+    .contact {
+        /*margin: 0 auto;*/
+        overflow: scroll;
+    }
+    .thank-you {
+        height: 160px;
+    }
+    .thank-you h3 {
+        font-size: 24px;
+        margin: 0 80px;
+    }
+    .contact h1 {
+        margin-top: 60px;
+    }
+    .footer {
+        /*position: relative;*/
+    }
 }
 
-.menu-media{
-  display:block;
-}
-
-.start-page .content {
-  width:300px;
-  height:100%;
-}
-
-.start-page, .start-page .opacity{
-  height:100%;
-}
-.start-page .content .text {
-  width:300px;
-}
-
-
-h1 {
-  font-size:36px;
-}
-
-.about-me h1 {
-  margin-top:0;
-}
-
-.about-me .content{
-  width:300px;
-}
-
-.about-me hr,.portfolio .portfolio-margin hr, .contact hr {
-  width:106px;
-}
-
-.about-me .column-one, .about-me .column-two{
-  width:300px;
-  margin-bottom:20px;
-}
-
- .about-me .content .column-three{
-  width:300px;
-  margin-bottom:70px;
- }
-
-.portfolio .portfolio-margin{
-  width:300px;
-}
-
-.partners .content{
-  width:300px;
-}
-
-.partners .logo {
-  width:300px;
-}
-
-.partners .logo img {
-  width:80px;
-  padding-bottom:20px;
-}
-
-.contact, .contact .content, .contact .content .form{
-  width:300px;
-}
-
-.contact .content .contact-text{
-  padding-left:0px;
-  width:300px;
-  text-align:center;
-  margin-top:60px;
-}
-
-input{
-  width:320px;
-}
-
-textarea{
-  width:320px;
-}
-
-.contact .content .contact-text {
-  width:275px;
-}
-
-.contact .content .form .column, .contact .content .form .column-3{
-  width:320px;
-}
-
-.contact .content .form .column-2{
-  width:320px;
-  padding-left:0;
-}
-
-.grid li{
-  margin:0 0 15px 0;
-}
-
-.contact{
-  margin:0 auto;
-}
-
-.footer{
-  position:relative;
-}
-
-}
-
-
-
-/* iPad (portrait) */
 @media (min-width: 580px) and (max-width: 767px) {
-
-.menu{
-  display:none;
+    .menu {
+        display: none;
+    }
+    .menu-media {
+        display: block;
+    }
+    .menu-media .menu-content {
+        width: 540px;
+    }
+    .start-page .content {
+        width: 300px;
+        height: 100%;
+    }
+    .start-page, .start-page .opacity {
+        height: 100%;
+    }
+    .start-page .content .text {
+        width: 300px;
+    }
+    h1 {
+        font-size: 36px;
+    }
+    .about-me h1 {
+        margin-top: 0;
+    }
+    .about-me .content {
+        width: 300px;
+    }
+    .about-me hr, .portfolio .portfolio-margin hr, .contact hr {
+        width: 350px;
+    }
+    .portfolio .portfolio-margin {
+        width: 300px;
+    }
+    .contact .content .contact-text {
+        padding-left: 0px;
+        width: 300px;
+        text-align: center;
+        margin-top: 60px;
+    }
+    .contact {
+        margin: 0 auto;
+    }
+    .footer {
+        position: relative;
+    }
 }
 
-.menu-media{
-  display:block;
-}
-
-.menu-media .menu-content{
-  width:540px;
-}
-
-.partners .logo img {
-  padding-bottom:20px;
-}
-
-.start-page .content {
-  width:300px;
-  height:100%;
-}
-
-.start-page, .start-page .opacity{
-  height:100%;
-}
-.start-page .content .text {
-  width:300px;
-}
-
-
-h1 {
-  font-size:36px;
-}
-
-.about-me h1 {
-  margin-top:0;
-}
-
-.about-me .content{
-  width:300px;
-}
-
-.about-me hr,.portfolio .portfolio-margin hr, .contact hr {
-  width:106px;
-}
-
-.about-me .column-one, .about-me .column-two{
-  width:300px;
-  margin-bottom:20px;
-}
-
- .about-me .column-three{
-  width:300px;
-  margin-bottom:70px;
- }
-
-.portfolio .portfolio-margin{
-  width:300px;
-}
-
-.partners .content{
-  width:400px;
-}
-
-.partners .logo {
-  width:400px;
-}
-
-.partners .logo img {
-  width:80px;
-  padding-bottom:20px;
-}
-
-.contact, .contact .content, .contact .content .form{
-  width:300px;
-}
-
-.contact .content .contact-text{
-  padding-left:0px;
-  width:300px;
-  text-align:center;
-  margin-top:60px;
-}
-
-.contact .content .contact-text {
-  width:275px;
-}
-
-.contact .content .form .column, .contact .content .form .column-3{
-  width:420px;
-}
-
-.contact .content .form .column-2{
-  width:420px;
-  padding-left:0;
-}
-
-.contact{
-  margin:0 auto;
-}
-
-.footer{
-  position:relative;
-}
-
-input{
-  width:420px;
-}
-
-textarea{
-  width:420px;
-}
-
-
-}
-
-
-
-
-
-
-
-
-
-
-
-/* iPad (portrait) */
 @media (min-width: 768px) and (max-width: 1023px) {
-
-
-
-.menu-content .logo{
-  width:200px;
-}
-
-.menu-content{
-  width:700px;
-}
-
-.about-me .content{
-  width:700px;
-}
-
-.about-me p{
-  width:200px;
-}
-
-.about-me h2{
-  letter-spacing:2px;
-}
-
-.about-me .column-one{
-  width:233px;
-}
-
-.about-me .column-two{
-  width:233px;
-}
-
-.about-me .column-three{
-  width:233px;
-}
-
-.portfolio .portfolio-margin {
-  width:600px;
-}
-
-.partners .content{
-  width:700px;
-}
-
-.partners .logo {
-  width:700px;
-}
-
-.contact{
-  margin:0 auto;
-}
-
-.contact .content {
-  width:700px
-}
-
-.footer{
-  position:relative;
-}
-
-.contact .content .form{
-  width:355px;
-}
-
-input{
-  width:320px;
-}
-
-textarea{
-  width:320px;
-}
-
-.contact .content .contact-text {
-  width:275px;
-}
-
-.contact .content .form .column, .contact .content .form .column-3{
-  width:450px;
-}
-
-.contact .content .form .column-2{
-  width:450px;
-  padding-left:0;
-}
-
-
+    .menu-content .name {
+        width: 200px;
+    }
+    .menu-content {
+        width: 700px;
+    }
+    .about-me .content {
+        width: 700px;
+    }
+    .about-me p {
+        width: 200px;
+    }
+    .about-me h2 {
+        letter-spacing: 2px;
+    }
+    .portfolio .portfolio-margin {
+        width: 600px;
+    }
+    .contact {
+        margin: 0 auto;
+    }
+    .contact .content {
+        width: 700px
+    }
+    .footer {
+        position: relative;
+    }
+    .contact .content .contact-text {
+        width: 275px;
+    }
 }
