--- a/public/css/style-responsive.css
+++ b/public/css/style-responsive.css
@@ -11,20 +11,31 @@
     .menu-media {
         display: block;
     }
-
+    .start-page {
+        position: relative;
+        width: 100%;
+        min-height: 350px;
+        margin-bottom: 50px;
+    }
     .start-page .content {
-        width: 300px;
+        width: 350px;
         height: 100%;
     }
     .start-page, .start-page .opacity {
-        height: 100%;
+        min-height: 100%;
     }
     .start-page .content .text {
         width: 300px;
-        margin: 150px auto;
+        margin: 50px auto;
+    }
+    .start-page-logo {
+      height: 50px;
     }
     h1 {
-        font-size: 36px;
+        font-size: 1em;
+    }
+    h2 {
+      font-size: 1em;
     }
     .about-me {
         padding: 50px 0;
@@ -90,7 +101,7 @@
     }
 }
 
-@media (min-width: 580px) and (max-width: 767px) {
+/*@media (min-width: 580px) and (max-width: 767px) {
     .menu {
         display: none;
     }
@@ -137,37 +148,4 @@
     .footer {
         position: relative;
     }
-}
-
-@media (min-width: 768px) and (max-width: 1023px) {
-    .menu-content .name {
-        width: 200px;
-    }
-    .menu-content {
-        width: 700px;
-    }
-    .about-me .content {
-        width: 700px;
-    }
-    .about-me p {
-        width: 200px;
-    }
-    .about-me h2 {
-        letter-spacing: 2px;
-    }
-    .portfolio .portfolio-margin {
-        width: 600px;
-    }
-    .contact {
-        margin: 0 auto;
-    }
-    .contact .content {
-        width: 700px
-    }
-    .footer {
-        position: relative;
-    }
-    .contact .content .contact-text {
-        width: 275px;
-    }
-}
+}*/
