--- a/public/css/style.css
+++ b/public/css/style.css
@@ -80,9 +80,10 @@ p {
 .start-page {
     position: relative;
     width: 100%;
-    height: 100%;
+    min-height: 550px;
+    /*margin-bottom: 100px;*/
     z-index: 1001;
-    background: url('../img/background/city_night.jpg') #c0c0c0 bottom center fixed no-repeat;
+    background: url('../img/background/chicago-dusk.jpg') #c0c0c0 bottom center fixed no-repeat;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -112,7 +113,6 @@ p {
     bottom: 0;
     right: 0;
     width: 700px;
-    height: 520px;
 }
 
 .start-page-logo {
@@ -150,7 +150,7 @@ p {
 .start-page .content .arrow-down {
     position: absolute;
     bottom: 110px;
-    left: 50%;
+    left: 85%;
     margin-left: -10px;
     width: 21px;
     height: 29px;
@@ -280,7 +280,7 @@ p {
 
 .menu {
     position: relative;
-    /*top: 0;*/
+    top: 0;
     width: 100%;
     height: 60px;
     background: white;
@@ -331,13 +331,19 @@ p {
 }
 
 .menu-content li.active a {
-    color: #282828;
+    color: rgb(66, 0, 107);
 }
 
 .menu-content li a:hover {
-    color: #282828;
+    color: white;
+    background-color: rgb(66, 0, 107);
 }
 
+.menu-scrolled {
+  position: fixed;
+  width: 100%;
+  top: 0;
+}
 
 /* About me */
 
@@ -346,7 +352,7 @@ p {
     width: 100%;
     background: white;
     z-index: 10;
-    padding: 100px 0;
+    padding: 100px 0 50px;
 }
 
 .about-me .content {
@@ -415,7 +421,7 @@ p {
     width: 183px;
     height: 47px;
     position: relative;
-    margin: 50px auto;
+    margin: 10px auto;
     line-height: 47px;
     border: 1px solid #333333;
     text-transform: uppercase;
@@ -520,6 +526,7 @@ p {
     width: 100%;
     background: white;
     z-index: 10;
+    padding: 100px 0 50px;
 }
 
 .portfolio .portfolio-margin {
@@ -619,6 +626,7 @@ p {
     z-index: 10;
     overflow: hidden;
     margin-bottom: 350px;
+    padding: 50px 0;
 }
 
 .contact .content {
@@ -632,7 +640,7 @@ p {
     font-size: 34px;
     color: black;
     text-align: center;
-    margin-top: 120px;
+    margin-top: 50px;
     letter-spacing: 6px;
     font-weight: bold;
     text-transform: uppercase;
