--- a/public/css/style.css
+++ b/public/css/style.css
@@ -223,6 +223,11 @@ p {
   width: 280px;
   position: relative;
   margin: 0 auto;
+  -webkit-transition: all 0.6s ease-in;
+  -moz-transition: all 0.6s ease-in;
+  -ms-transition: all 0.6s ease-in;
+  -o-transition: all 0.6s ease-in;
+  transition: all 0.6s ease-in;
 }
 
 .menu-media .menu-content .name {
@@ -244,7 +249,7 @@ p {
 
 .menu-click {
   display: none;
-  /*margin-top: 5px;*/
+  margin-top: 72px;
 }
 
 .menu-click li {
@@ -284,7 +289,7 @@ p {
 }
 
 .menu-content {
-  width: 900px;
+  width: 800px;
   position: relative;
   margin: 0 auto;
 }
@@ -293,14 +298,14 @@ p {
   color: #333;
   font-weight: 700;
   font-size: 24px;
-  width: 300px;
+  /*width: 300px;*/
   line-height: 60px;
   float: left;
   list-style: none;
 }
 
 .menu-content ul {
-  width: 500px;
+  /*width: 500px;*/
   left: 50%;
   float: right;
   text-align: right;
@@ -353,10 +358,9 @@ p {
 
 .portfolio .portfolio-margin {
   position: relative;
-  /*width: 900px;*/
   overflow: hidden;
   margin: 0 auto;
-  /*padding: 100px 0;*/
+  padding: 35px 0;
 }
 
 .portfolio .portfolio-margin h1 {
@@ -404,6 +408,8 @@ p {
   overflow: hidden;
   display: flex;
   justify-content: center;
+  align-items: baseline;
+  border: 1px solid rgb(66, 0, 107);
 }
 
 .grid img {
@@ -450,7 +456,6 @@ p {
 
 .about-me .content {
   position: relative;
-  width: 900px;
   margin: 0 auto;
   overflow: hidden;
 }
@@ -623,7 +628,6 @@ p {
 
 .contact .content {
   position: relative;
-  width: 900px;
   overflow: hidden;
   margin: 70px auto 100px;
 }
@@ -675,12 +679,6 @@ strong {
   display: flex;
   flex-direction: column;
   justify-content: center;
-}
-
-.thank-you .content {
-  width: 900px;
-  height: 40px;
-  margin: auto;
 }
 
 .thank-you h3 {
