--- a/public/css/style-responsive.css
+++ b/public/css/style-responsive.css
@@ -36,22 +36,30 @@
       height: 100px;
     }
     h1 {
-        font-size: 2em;
+        font-size: 1.75rem;
     }
     h2 {
-      font-size: 1.25em;
+      font-size: 1.25rem;
       margin: 5px auto 0;
+    }
+    h3 {
+        font-size: .85rem;
     }
     .about-me {
         padding: 50px 0;
     }
     .about-me h1 {
-        margin-top: 0;
-        font-size: 26px;
+        margin-top: 30px;
         letter-spacing: 3px;
     }
-    .about-me p .title {
+    .about-me h2 {
+        font-size: 1.25rem;
+    }
+        .about-me p .title {
         margin: 20px auto;
+    }
+    .about-me p {
+        font-size: .8rem;
     }
     .about-me .content {
         width: 325px;
@@ -61,16 +69,17 @@
     }
     .about-me .bio {
         margin: 20px auto;
+        font-size: .8rem;
     }
     .portfolio {
       padding: 170px 0 0;
     }
     .portfolio .portfolio-margin {
-        width: 400px;
         padding: 0;
     }
     .portfolio .grid .text {
         width: 325px;
+        font-size: .9rem;
     }
     .portfolio .grid .grid-box {
         width: 350px;
@@ -79,6 +88,9 @@
     .grid h2 {
         margin: 15px 0 10px;
         font-size: 1.75em;
+    }
+    .grid li {
+        font-size: .8rem;
     }
     .grid img {
         width: 100%;
